--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@ title: Iveta Círová
 
   <p class="hero__description">AI-assisted development • JavaScript • TypeScript • React</p>
 
-  <p class="description">
+  <p class="description description--hero">
 Vytvářím webové aplikace s důrazem na testovatelnost,
 čistý kód a efektivní vývoj. AI beru jako přirozenou součást
 každodenní práce.  </p>
 
-  <div class="buttons">
+  <div class="buttons buttons--hero">
     <button id="btn-projects" class="btn"> Projekty</button>
-    <button id="btn-cv" class="btn"> CV</button>
+    <button id="btn-cv" class="btn btn--secondary"> CV</button>
     
   </div>
 
@@ -56,7 +56,7 @@ každodenní práce.  </p>
   <p class="description">
    Postupně jsem se začala více zajímat o automatizaci a frontendový
 vývoj. JavaScript mě nadchl natolik, že jsem se rozhodla jít cestou
-QA s přesahem do vývoje. Pracuji s TypeScriptem a Reactem a
+QA s přesahem do vývoje. Pracuji s JavaScriptem a Reactem a
 dlouhodobě si rozšiřuji technické znalosti.
   </p>
 
@@ -71,8 +71,7 @@ dlouhodobě si rozšiřuji technické znalosti.
   <h2 class="subtitle subtitle--ai">Jak pracuji s AI</h2>
   
   <p class="description">
-   AI používám jako každodenní pracovní nástroj, ne jako náhradu
-přemýšlení. Pomáhá mi pracovat efektivněji a soustředit se na
+   AI používám jako každodenní pracovní nástroj, ne jako náhradu vlastního myšlení. Pomáhá mi pracovat efektivněji a soustředit se na
 logiku, kvalitu a čitelnost kódu.
   </p>
 
@@ -103,15 +102,17 @@ technologiích.  </p>
 <section class="tech">
   <h2 class="subtitle subtitle--tech">Technologie</h2>
   
-  <p class="tech-line">
-    <strong>JavaScript</strong> • <strong>TypeScript</strong> • <strong>React</strong>
-  </p>
-  <p class="tech-line">
-    QA testing • <span class="accent">AI-assisted development</span>
-  </p>
-  <p class="tech-line">
-    <span class="muted">Základy:</span> Docker • GraphQL • C#
-  </p>
+  <ul class="tech-list">
+    <li>
+      <strong>JavaScript</strong> • <strong>TypeScript</strong> • <strong>React</strong>
+    </li>
+    <li>
+      <strong>QA testing</strong> • <strong class="accent">AI-assisted development</strong>
+    </li>
+    <li>
+      Docker • GraphQL • C#
+    </li>
+  </ul>
 
 </section>
 
