--- a/cv.html
+++ b/cv.html
@@ -178,27 +178,59 @@ title: Iveta Círová - CV
     </div>
 
 
-    <h2 class="subtitle subtitle--resume">Dovednosti</h2>
+    <h2 class="subtitle subtitle--resume">Dovednosti / Technologie</h2>
 
     <div class="skills">
 
-        <p class="badge">JavaScript</p>
-        <p class="badge">TypeScript</p>
-        <p class="badge">React</p>
-        <p class="badge">WebdriverIO</p>
-        <p class="badge">Playwright</p>
-        <p class="badge">Xray</p>
-        <p class="badge">TestRail</p>
-        <p class="badge">JIRA</p>
-        <p class="badge">GitHub, GitLab</p>
-        <p class="badge">MySQL</p>
-        <p class="badge">PostgreS</p>
-        <p class="badge">HTML, CSS</p>
-        <p class="badge">SASS</p>
-        <p class="badge">BEM</p>
-        <p class="badge">Figma</p>
-        <p class="badge">Photoshop</p>
+  <div class="skill-group">
+    <h3>Frontend</h3>
+    <p class="badge">JavaScript</p>
+    <p class="badge">TypeScript</p>
+    <p class="badge">React</p>
+    <p class="badge">HTML</p>
+    <p class="badge">CSS</p>
+    <p class="badge">SASS</p>
+    <p class="badge">BEM</p>
+  </div>
 
+  <div class="skill-group">
+    <h3>QA & Testing</h3>
+    <p class="badge">WebdriverIO</p>
+    <p class="badge">Playwright</p>
+    <p class="badge">Xray</p>
+    <p class="badge">TestRail</p>
+    <p class="badge">JIRA</p>
+  </div>
+
+  <div class="skill-group">
+    <h3>Backend & Databáze (základy)</h3>
+    <p class="badge">Node.js</p>
+    <p class="badge">REST API</p>
+    <p class="badge">MySQL</p>
+    <p class="badge">PostgreSQL</p>
+  </div>
+
+  <div class="skill-group">
+    <h3>Workflow & Nástroje</h3>
+    <p class="badge">Git (GitHub, GitLab)</p>
+    <p class="badge">VS Code</p>
+  </div>
+
+  <div class="skill-group">
+    <h3>Design & UX</h3>
+    <p class="badge">Figma</p>
+    <p class="badge">Photoshop</p>
+  </div>
+
+  <div class="skill-group">
+    <h3>AI & Produktivita</h3>
+    <p class="badge">AI-assisted development</p>
+    <p class="badge">ChatGPT</p>
+    <p class="badge">Gemini</p>
+    <p class="badge">Codex / Cursor</p>
+  </div>
+
+</div>
     </div>
 
 </section>
