--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ technologiích.  </p>
 <section class="free-time" id="volny-cas">
   <h2 class="subtitle subtitle--free">Volný čas</h2>
 
-  <p>
+  <p class="description">
     Ve volném čase píšu sci-fi povídky, které publikuji na webu
     <a href="https://www.tragedium.cz" target="_blank" rel="noopener">
       tragedium.cz
