--- a/kontakt.html
+++ b/kontakt.html
@@ -7,6 +7,35 @@ title: Iveta Círová - Kontakt
 
     <h1 class="title">Kontakty</h1>
 
-    <p style="margin: 40px;">Zde budou kontakty.</p>
+    <p class="description contact__lead">
+      Nejrychleji odpovídám přes e‑mail.
+    </p>
+
+    <div class="contact__primary">
+      <span
+        class="contact__email js-email"
+        data-user="cirova.iveta"
+        data-domain="ptw.cz"
+      ></span>
+    </div>
+
+    <div class="contact__links">
+      <a
+        href="https://www.linkedin.com/in/iveta-c%C3%ADrov%C3%A1-b8638424a/"
+        class="btn btn--secondary"
+        target="_blank"
+        rel="noopener"
+      >
+        LinkedIn
+      </a>
+      <a
+        href="https://github.com/icirova?tab=repositories"
+        class="btn btn--secondary"
+        target="_blank"
+        rel="noopener"
+      >
+        GitHub
+      </a>
+    </div>
 
 </section>
