--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Iveta Círová
   <div class="badge badge--hero">Frontend Developer</div>
   </div>
 
-  <p class="hero__description">AI-assisted development • JavaScript • TypeScript • React</p>
+  <p class="hero__description">QA mindset propojený s frontendovým vývojem a AI-assisted workflow.</p>
 
   <p class="description description--hero">
 Vytvářím webové aplikace s důrazem na testovatelnost,
@@ -50,15 +50,14 @@ každodenní práce.  </p>
 
   
 <p class="description">
-    K IT jsem se dostala přes manuální testování webů a e-shopů, kde jsem si vypěstovala cit pro kvalitu, detail a uživatelskou zkušenost.
+    K IT jsem se dostala přes manuální testování webů a e-shopů, kde jsem si vypěstovala cit pro kvalitu, detail a uživatelskou zkušenost. Právě práce s reálnými aplikacemi mě naučila dívat se na software očima uživatele i testera zároveň.
   </p>
 
   <p class="description">
    Postupně jsem se začala více zajímat o automatizaci a frontendový
 vývoj. JavaScript mě nadchl natolik, že jsem se rozhodla jít cestou
-QA s přesahem do vývoje. Pracuji s JavaScriptem a Reactem a
-dlouhodobě si rozšiřuji technické znalosti.
-  </p>
+QA s přesahem do vývoje. Pracuji s JavaScriptem, TypeScriptem a Reactem a dlouhodobě si rozšiřuji technické znalosti tak, abych rozuměla chování aplikace nejen z pohledu testů, ale i kódu.
+</p>
 
   <!--<p class="description">
     Znalosti <strong>JavaScriptu</strong> jsem si rozšířila studiem <strong>TypeScriptu</strong> a <strong>Reactu</strong>. Také se seznamuji s dalšími technologiemi: Docker, GraphQL a Linux. Začínám programovat v C# a na denně využívám AI - ChatGPT a Gemini.
@@ -71,12 +70,16 @@ dlouhodobě si rozšiřuji technické znalosti.
   <h2 class="subtitle subtitle--ai">Jak pracuji s AI</h2>
   
   <p class="description">
-   AI používám jako každodenní pracovní nástroj, ne jako náhradu vlastního myšlení. Pomáhá mi pracovat efektivněji a soustředit se na
-logiku, kvalitu a čitelnost kódu.
-  </p>
+  AI používám jako každodenní pracovní nástroj, ne jako náhradu za vlastní myšlení.
+  Pomáhá mi pracovat efektivněji a soustředit se na logiku, kvalitu a čitelnost kódu.
+</p>
 
-  
-  <ul class="ai-tools">
+<p class="description">
+  Využívám ji při návrhu architektury, rozkladu úloh, psaní i refactoringu kódu
+  a při hledání chyb.
+</p>
+
+<ul class="ai-tools">
   <li>
     <strong>ChatGPT</strong> – návrh architektury, rozpad úloh,
     vysvětlení konceptů
@@ -90,10 +93,10 @@ logiku, kvalitu a čitelnost kódu.
   </li>
 </ul>
 
-  <p class="description">
-Díky AI dokážu jako junior vytvořit plnohodnotné aplikace,
-udržovat konzistentní kód a rychle se orientovat v nových
-technologiích.  </p>
+<p class="description">
+  Díky AI dokážu jako junior vytvářet plnohodnotné aplikace,
+  udržovat konzistentní řešení a rychle se orientovat v nových technologiích.
+</p>
 
   
 
@@ -109,9 +112,6 @@ technologiích.  </p>
     <li>
       <strong>QA testing</strong> • <strong class="accent">AI-assisted development</strong>
     </li>
-    <li>
-      Docker • GraphQL • C#
-    </li>
   </ul>
 
 </section>
@@ -122,9 +122,6 @@ technologiích.  </p>
   <p class="description">
     Ve volném čase píšu sci-fi povídky, které publikuji na webu
     <a href="https://www.tragedium.cz" target="_blank" rel="noopener">
-      tragedium.cz
-    </a>.
-    Kreativní psaní mi pomáhá rozvíjet strukturované myšlení,
-    práci s komplexními systémy a důraz na detail.
+      tragedium.cz</a>. Kreativní psaní mi pomáhá rozvíjet strukturované myšlení, práci s komplexními systémy a důraz na detail.
   </p>
 </section>
