styly a obsah CV

--- a/index.html
+++ b/index.html
@@ -39,15 +39,6 @@ každodenní práce.  </p>
 <section class="about">
   <h2 class="subtitle subtitle--about">O mně</h2>
 
-  <!-- <p class="badge badge--about">JS, TS, REACT</p> -->
-
-  <!--<p class="description">
-    První zkušenosti v IT jsem získala manuálním
-    <strong>testováním</strong> webů a e-shopů. Abych zlepšila své dovednosti absolvovala jsem
-    kurz <a href="/cv/#test" class="link">Jak se stát testerem</a>. Poté kurz <a href="/cv/#automation" class="link">Automatizace v testování</a>, kde jsem
-    se seznámila s JavaScriptem. Byla jsem nadšená. Kromě QA jsem se tedy rozhodla zabývat také frontendovým vývojem. Začala jsem kurzem <a href="/cv/#coding" class="link">Staň se kodérkou</a> a získala certifikát.
-  </p><-->
-
   
 <p class="description">
     K IT jsem se dostala přes manuální testování webů a e-shopů, kde jsem si vypěstovala cit pro kvalitu, detail a uživatelskou zkušenost. Právě práce s reálnými aplikacemi mě naučila dívat se na software očima uživatele i testera zároveň.
@@ -59,10 +50,7 @@ vývoj. JavaScript mě nadchl natolik, že jsem se rozhodla jít cestou
 QA s přesahem do vývoje. Pracuji s JavaScriptem, TypeScriptem a Reactem a dlouhodobě si rozšiřuji technické znalosti tak, abych rozuměla chování aplikace nejen z pohledu testů, ale i kódu.
 </p>
 
-  <!--<p class="description">
-    Znalosti <strong>JavaScriptu</strong> jsem si rozšířila studiem <strong>TypeScriptu</strong> a <strong>Reactu</strong>. Také se seznamuji s dalšími technologiemi: Docker, GraphQL a Linux. Začínám programovat v C# a na denně využívám AI - ChatGPT a Gemini.
-  </p>-->
-
+  <p class="description">Při vývoji se snažím rozumět aplikaci jako celku – od uživatelského rozhraní až po chování systému v běhu.</p>
 
 </section>
 
