--- a/cv.html
+++ b/cv.html
@@ -19,17 +19,6 @@ title: Iveta Círová - CV
   <div class="skills">
 
   <div class="skill-group">
-    <h3>Frontend</h3>
-    <p class="badge">JavaScript</p>
-    <p class="badge">TypeScript</p>
-    <p class="badge">React</p>
-    <p class="badge">HTML</p>
-    <p class="badge">CSS</p>
-    <p class="badge">SASS</p>
-    <p class="badge">BEM</p>
-  </div>
-
-  <div class="skill-group">
     <h3>QA & Testing</h3>
     <p class="badge">Manuální testování</p>
     <p class="badge">Automatizované testování</p>
@@ -41,6 +30,20 @@ title: Iveta Círová - CV
     <p class="badge">Xray</p>
     <p class="badge">Postman</p>
     
+  </div>
+  
+    <div class="skill-group">
+    <h3>Frontend</h3>
+    <p class="badge">JavaScript</p>
+    <p class="badge">TypeScript</p>
+    <p class="badge">React</p>
+    <p class="badge">Vite</p>
+    <p class="badge">Next.js</p>
+    <p class="badge">Eleventy</p>
+    <p class="badge">HTML</p>
+    <p class="badge">CSS</p>
+    <p class="badge">SASS</p>
+    <p class="badge">BEM</p>
   </div>
 
   <div class="skill-group">
