--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ každodenní práce.  </p>
   </div>
 
   <img
-    src="/images/profilove-foto2.webp"
+    src="/images/prof.png"
     alt="profilové foto"
     class="hero__image"
     width="300px"
