--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ každodenní práce.  </p>
   </div>
 
   <img
-    src="/images/prof.png"
+    src="/images/pro_up.webp"
     alt="profilové foto"
     class="hero__image"
     width="300px"
