projekt gift tracker

--- a/projekty.html
+++ b/projekty.html
@@ -8,6 +8,58 @@ title: Iveta Círová - Projekty
 
   <div class="card card--project">
     <div class="card__header">
+      <h3 class="subtitle subtitle--projects">Christmas Gift Tracker</h3>
+      <div class="badges">
+        <span class="badge">React</span>
+        <span class="badge">Vite</span>
+        <span class="badge">JavaScript</span>
+        <span class="badge">Chart.js</span>
+        <span class="badge">ESLint</span>
+        <span class="badge">LocalStorage</span>
+      </div>
+      <div class="icons">
+        <a href="https://x-gift-tracker.netlify.app/" class="icon-link"
+          ><img
+            src="/icons/link-icon.svg"
+            alt="ikona odkazu"
+            class="icon-image"
+            width="25px"
+        /></a>
+        <a href="https://github.com/icirova/gift-tracker" class="icon-link"
+          ><img
+            src="/icons/github_icon.svg"
+            alt="ikona gitHub"
+            class="icon-image"
+            width="25px"
+        /></a>
+      </div>
+    </div>
+
+    <a class="project-thumb" href="https://x-gift-tracker.netlify.app/">
+      <img
+        src="/images/tracker.webp"
+        alt="Náhled projektu Gift Tracker"
+        loading="lazy"
+        width="1280"
+        height="720"
+      />
+    </a>
+
+    <p class="card-description">
+      Webová aplikace pro sledování vánočních dárků napříč roky, včetně rozpočtu
+      a statistik. Umožňuje vést seznam osob, přidávat dárky se stavem (Koupeno
+      / Plánováno) a cenou, sledovat plán vs. rozpočet a přehledně zobrazit
+      historii i grafy. Aplikace startuje s demo daty a ukládá změny do
+      <code>localStorage</code>. Součástí projektu je také kompletní manuální
+      testovací dokumentace (test plan, test scénáře, testovací data), dostupná
+      <a href="https://github.com/icirova/gift-tracker/tree/main/docs/qa" class="link"
+        >zde.</a
+      >
+    </p>
+  </div>
+
+  <div class="card card--project">
+    <div class="card__header">
       <h3 class="subtitle subtitle--projects">
         WebdriverIO – Automation Tester (pohovor)
       </h3>
@@ -30,7 +82,7 @@ title: Iveta Círová - Projekty
     <p class="card-description">
       Jedná se o příklad k pohovoru na pozici Automation Tester. Naprogramovala
       jsem automatizované testy ve frameworku WebdriverIO dle zadání ⟮viz
-      README.md v projektu⟯.
+      <code>README.md</code> v projektu⟯.
     </p>
   </div>
 
